--- a/templates/apache/madison.conf.erb
+++ b/templates/apache/madison.conf.erb
@@ -24,6 +24,6 @@
     RewriteRule . /index.html [L]
   </Directory>
 
-  ErrorLog /var/log/httpd/<%= @params[:name] %>-error.log
-  CustomLog /var/log/httpd/<%= @params[:name] %>-access.log combined
+  ErrorLog /var/log/apache2/<%= @params[:name] %>-error.log
+  CustomLog /var/log/apache2/<%= @params[:name] %>-access.log combined
 </VirtualHost>
