Fix parameter passing to madison env file

--- a/templates/site/madison/.env.erb
+++ b/templates/site/madison/.env.erb
@@ -2,17 +2,17 @@
 APP_ENV=production
 APP_DEBUG=false
 APP_KEY=SomeRandomString
-APP_NAME='<%= node[:name] %>'
-APP_URL='<%= node[:name] %>'
+APP_NAME='<%= @params['site_title'] %>'
+APP_URL='<%= @params['ssl'] ? 'https://' : 'http://' %><%= @params['url'] %>'
 
 # Settings for services
 
 # Database
 DB_DRIVE=mysql
 DB_HOST=127.0.0.1
-DB_DATABASE=<%= node[:database_name] %>
-DB_USERNAME=<%= node[:database_username] %>
-DB_PASSWORD=<%= node[:database_password] %>
+DB_DATABASE=<%= @params['database_name'] %>
+DB_USERNAME=<%= @params['database_username'] %>
+DB_PASSWORD=<%= @params['database_password'] %>
 
 # Cache
 CACHE_DRIVER=file
@@ -20,44 +20,44 @@ CACHE_DRIVER=file
 # Session
 SESSION_DRIVER=file
 
-COOKIE_DOMAIN=<%= node[:cookie_domain] %>
+COOKIE_DOMAIN=.<%= @params['url'] %>
 
 # Queue
 QUEUE_DRIVER=database
 
 # Third Party Services
 
-<% if node[:mail_host] -%>
-# MAIL_DRIVER=<%= node[:mail_driver] %>
-# MAIL_HOST=<%= node[:mail_host] %>
-# MAIL_PORT=<%= node[:mail_port] %>
-# MAIL_USERNAME=<%= node[:mail_username] %>
-# MAIL_PASSWORD=<%= node[:mail_password] %>
-# MAIL_ENCRYPTION=<%= node[:mail_encryption] %>
-# MAIL_FROM_ADDRESS=<%= node[:mail_from_address] %>
-# MAIL_FROM_NAME=<%= node[:mail_from_name] %>
+<% if @params['mail_host'] -%>
+# MAIL_DRIVER=<%= @params['mail_driver'] %>
+# MAIL_HOST=<%= @params['mail_host'] %>
+# MAIL_PORT=<%= @params['mail_port'] %>
+# MAIL_USERNAME=<%= @params['mail_username'] %>
+# MAIL_PASSWORD=<%= @params['mail_password'] %>
+# MAIL_ENCRYPTION=<%= @params['mail_encryption'] %>
+# MAIL_FROM_ADDRESS=<%= @params['mail_from_address'] %>
+# MAIL_FROM_NAME=<%= @params['mail_from_name'] %>
 <% end -%>
-<% if node[:facebook_id] -%>
+<% if @params['facebook_id'] -%>
 # Facebook Key
-FB_CLIENT_ID=<%= node[:facebook_id] %>
-FB_CLIENT_SECRET=<%= node[:facebook_secret] %>
+FB_CLIENT_ID=<%= @params['facebook_id'] %>
+FB_CLIENT_SECRET=<%= @params['facebook_secret'] %>
 <% end -%>
-<% if node[:twitter_id] -%>
+<% if @params['twitter_id'] -%>
 # Twitter Key
-TW_CLIENT_ID=<%= node[:twitter_id] %>
-TW_CLIENT_SECRET=<%= node[:twitter_secret] %>
+TW_CLIENT_ID=<%= @params['twitter_id'] %>
+TW_CLIENT_SECRET=<%= @params['twitter_secret'] %>
 <% end -%>
-<% if node[:linkedin_id] -%>
+<% if @params['linkedin_id'] -%>
 # LinkedIn Key
-LI_CLIENT_ID=<%= node[:linkedin_id] %>
-LI_CLIENT_SECRET=<%= node[:linkedin_secret] %>
+LI_CLIENT_ID=<%= @params['linkedin_id'] %>
+LI_CLIENT_SECRET=<%= @params['linkedin_secret'] %>
 <% end -%>
-<% if node[:uservoice_id] -%>
+<% if @params['uservoice_id'] -%>
 # This is the uservoice javascript file hash in the UV uv.src embed code
 # Used as such: uv.src = '//widget.uservoice.com/' + uservoiceHash + '.js';
-USERVOICE=<%= node[:uservoice_id] %>
+USERVOICE=<%= @params['uservoice_id'] %>
 <% end -%>
-<% if node[:googleanalytics_id] -%>
+<% if @params['googleanalytics_id'] -%>
 # Your Google Analytics account (eg. 'UA-00000000-0')
-GA=<%= node[:googleanalytics_id] %>
+GA=<%= @params['googleanalytics_id'] %>
 <% end -%>
