Moving more things to attributes and re-fixing some broken template things from the merge.

--- a/templates/site/madison/.env.erb
+++ b/templates/site/madison/.env.erb
@@ -2,7 +2,7 @@
 APP_ENV=production
 APP_DEBUG=false
 APP_KEY=SomeRandomString
-APP_NAME='<%= @params['site_title'] %>'
+APP_NAME='<%= @params['name'] %>'
 APP_URL='<%= @params['ssl'] ? 'https://' : 'http://' %><%= @params['url'] %>'
 
 # Settings for services
