Fixing up path building and log directories.

--- a/templates/apache/madison.conf.erb
+++ b/templates/apache/madison.conf.erb
@@ -46,8 +46,8 @@
   SSLCertificateChainFile /etc/ssl/<%= @params[:server_name] %>.pem
   <% end %>
 
-  ErrorLog /var/log/apache2/<%= @params[:name] %>-error.log
-  CustomLog /var/log/apache2/<%= @params[:name] %>-access.log combined
+  ErrorLog <%= node['apache']['log_dir'] %>/<%= @params[:name] %>-error.log
+  CustomLog <%= node['apache']['log_dir'] %>/<%= @params[:name] %>-access.log combined
 </VirtualHost>
 
 <% if @params[:ssl] %>
@@ -74,7 +74,7 @@
     </IfVersion>
   </Directory>
 
-  ErrorLog /var/log/apache2/<%= @params[:name] %>-letencrypt-error.log
-  CustomLog /var/log/apache2/<%= @params[:name] %>-letsencrypt-access.log combined
+  ErrorLog <%= node['apache']['log_dir'] %>/<%= @params[:name] %>-letencrypt-error.log
+  CustomLog <%= node['apache']['log_dir'] %>/<%= @params[:name] %>-letsencrypt-access.log combined
 </VirtualHost>
 <% end %>
