Uncomment mail settings in `.env.erb`

--- a/templates/site/madison/.env.erb
+++ b/templates/site/madison/.env.erb
@@ -28,14 +28,14 @@ QUEUE_DRIVER=database
 # Third Party Services
 
 <% if @params['mail_host'] -%>
-# MAIL_DRIVER=<%= @params['mail_driver'] %>
-# MAIL_HOST=<%= @params['mail_host'] %>
-# MAIL_PORT=<%= @params['mail_port'] %>
-# MAIL_USERNAME=<%= @params['mail_username'] %>
-# MAIL_PASSWORD=<%= @params['mail_password'] %>
-# MAIL_ENCRYPTION=<%= @params['mail_encryption'] %>
-# MAIL_FROM_ADDRESS=<%= @params['mail_from_address'] %>
-# MAIL_FROM_NAME=<%= @params['mail_from_name'] %>
+MAIL_DRIVER=<%= @params['mail_driver'] %>
+MAIL_HOST=<%= @params['mail_host'] %>
+MAIL_PORT=<%= @params['mail_port'] %>
+MAIL_USERNAME=<%= @params['mail_username'] %>
+MAIL_PASSWORD=<%= @params['mail_password'] %>
+MAIL_ENCRYPTION=<%= @params['mail_encryption'] %>
+MAIL_FROM_ADDRESS=<%= @params['mail_from_address'] %>
+MAIL_FROM_NAME=<%= @params['mail_from_name'] %>
 <% end -%>
 <% if @params['facebook_id'] -%>
 # Facebook Key
